--- a/index.html
+++ b/index.html
@@ -4,10 +4,7 @@
     <title>Titlecard</title>
   </head>
   
-    <head>
-        <title>My awesome web page</title>
-    </head>
-
+  <body>
     Hello there, awesome person!
   </body>
   
